stateDiagram-v2
    [*] --> queued
    queued --> running: claim
    queued --> cancel_requested: cancel
    cancel_requested --> cancelled: worker acknowledgement
    running --> cancel_requested: cancel
    running --> succeeded: complete
    running --> failed: error
    running --> stale: heartbeat timeout
    failed --> queued: explicit retry, attempt < max_attempts
    stale --> queued: recover, attempt < max_attempts
    stale --> failed: max_attempts exhausted
    cancelled --> [*]
    succeeded --> [*]
    failed --> [*]

    note right of running
        Claim commits before handler work.
        Heartbeat and progress use short transactions.
    end note
